# yarp_addons

./: CMakeLists.txt  CMakeSettings.json
src/: FrameTransform.h  IFrameSet.h  IFrameSource.h  ImplementIFrameSource.cpp  api.h  yarp_addons_api.h
src/devices/: CMakeLists.txt
src/devices/FrameBroadcaster/: CMakeLists.txt  FrameBroadcaster.cpp  FrameBroadcaster.h
src/devices/FrameReceiver/: CMakeLists.txt  FrameReceiver.cpp  FrameReceiver.h
src/devices/ovrheadset/: CMakeLists.txt  OVRHeadset.cpp  OVRHeadset.h
src/devices/yarp-vicon-bridge/: CMakeLists.txt  YarpViconBridge.cpp  YarpViconBridge.h  vicon.ini
