find_package(YCM)
add_subdirectory(FrameBroadcaster)
add_subdirectory(FrameReceiver)
find_package(GLEW)
find_package(glfw3)
find_package(LibOVR)

option(COMPILE_OVRDEVICE OFF)
if(${COMPILE_OVRDEVICE})
    add_subdirectory(ovrheadset)
endif()

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/yarp-vicon-bridge)
find_package(ViconSDK)
if(ViconSDK_FOUND)
    add_subdirectory(yarp-vicon-bridge)
endif()